--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
     <title>Lion and Hyena</title>
 </head>
 <body>
+    <script src="config.js"></script>
+    <script src="entity.js"></script>
     <script src="apps.js"></script>
 </body>
 </html>
