--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <script src="asset/p5.min.js"></script>
+    <script src="assets/p5.min.js"></script>
     <title>Lion and Hyena</title>
 </head>
 <body>
