--- a/index.html
+++ b/index.html
@@ -4,12 +4,20 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <script src="assets/pathfinding-browser.min.js"></script>
     <script src="assets/p5.min.js"></script>
     <title>Lion and Hyena</title>
+    <style>
+    html {
+        margin: -8px;
+        overflow: hidden;
+    }
+    </style>
 </head>
 <body>
     <script src="config.js"></script>
     <script src="entity.js"></script>
+    <script src="arena.js"></script>
     <script src="apps.js"></script>
 </body>
 </html>
